src/frameworks/Error Logger/main/objects/Error_Log__c/fields/DML_Exception_Details__c.field-meta.xml
<CustomField>
    <fullName>DML_Exception_Details__c</fullName>
    <description>List and details of all DML exceptions including the record ID and fields that errored</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>List and details of all DML exceptions including the record ID and fields that errored</inlineHelpText>
    <label>DML Exception Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>