src/frameworks/Error Logger/main/objects/Error_Log__c/fields/Http_End_Point__c.field-meta.xml
<CustomField>
    <fullName>Http_End_Point__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Http End Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>