src/frameworks/Error Logger/main/objects/Error_Log__c/fields/Http_Method__c.field-meta.xml
<CustomField>
    <fullName>Http_Method__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Http Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>