src/frameworks/Error Logger/main/objects/Error_Log__c/fields/Http_Request__c.field-meta.xml
<CustomField>
    <fullName>Http_Request__c</fullName>
    <description>This field stores request payload</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Http Request Payload</inlineHelpText>
    <label>Http Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>