src/frameworks/Error Logger/main/objects/Error_Log__c/fields/Http_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Http_Status_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Http Status Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>