src/frameworks/Error Logger/main/objects/Error_Log__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>The involved records e.g. Account Id, Financial Account Id, etc
PLANHUB-114531</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>