src/frameworks/Error Logger/main/objects/Error_Log__c/fields/Running_User__c.field-meta.xml
<CustomField>
    <fullName>Running_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who initiated the action that caused the error</description>
    <inlineHelpText>User who initiated the action that caused the error</inlineHelpText>
    <label>Running User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>